--- a/pom.xml
+++ b/pom.xml
@@ -5,10 +5,10 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>org.example</groupId>
-  <artifactId>ProjectAutoTest</artifactId>
+  <artifactId>WebUI</artifactId>
   <version>1.0-SNAPSHOT</version>
 
-  <name>ProjectAutoTest</name>
+  <name>WebUI</name>
   <!-- FIXME change it to the project's website -->
   <url>http://www.example.com</url>
 
